--- a/Tela_Login/Tela_Login.html
+++ b/Tela_Login/Tela_Login.html
@@ -17,7 +17,7 @@
       
         <main> 
             <figure> <a href = "Tela_Login.html"> <img src = "Logo.png" alt = "Logo da Empresa" id = "Logo"> </a> </figure>
-            <form action = "../Pagina_Inicial/Pagina_Inicial.html" method = "POST" id = "formulario">
+            <form action = "../Pagina_Inicial/Pagina_Inicial.html" method = "GET" id = "formulario">
                 <section id = "tela_login">  
                     <header>
                         <p> <img src = "icon_person.png" alt = "Imagem de um ícone de uma pessoa genérica"> LOGIN </p>
