--- a/Tela_Login/Tela_Login.html
+++ b/Tela_Login/Tela_Login.html
@@ -5,7 +5,6 @@
         <title> The Five Players - Login </title>
         <link rel = "stylesheet" href = "Css_Login.css">
         <link rel = "sortcut icon" href = "Icon_Navegador.png" type = "image/x-icon"/>
-        <script src = "../saudacao.js"></script>
         <style> 
             @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@900&display=swap'); /* Fonte Roboto Bold */
             @import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@700&display=swap'); /* Fonte Passion One Bold */
@@ -17,7 +16,7 @@
       
         <main> 
             <figure> <a href = "Tela_Login.html"> <img src = "Logo.png" alt = "Logo da Empresa" id = "Logo"> </a> </figure>
-            <form action = "../Pagina_Inicial/Pagina_Inicial.html" method = "GET" id = "formulario">
+            <form action = "../Pagina_Inicial/Pagina_Inicial.html" id = "formulario">
                 <section id = "tela_login">  
                     <header>
                         <p> <img src = "icon_person.png" alt = "Imagem de um ícone de uma pessoa genérica"> LOGIN </p>
