--- a/Pagina_Inicial/Pagina_Inicial.html
+++ b/Pagina_Inicial/Pagina_Inicial.html
@@ -5,7 +5,6 @@
         <title> The Five Players - Página Inicial </title>
         <link rel = "stylesheet" href = "Css_Página Inicial.css">
         <link rel = "sortcut icon" href = "../Especificação/Imagens_Utilizadas/Icon_Navegador.png" type = "image/x-icon"/>
-        <script src = "../saudacao.js"></script>
         <style> 
             @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@900&display=swap'); /* Fonte Roboto Bold */
             @import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@700&display=swap'); /* Fonte Passion One Bold */
@@ -16,7 +15,7 @@
     <body>
         <header>
             <a href = "Pagina_Inicial.html"><img src = "../Especificacao/Imagens_Utilizadas/Logo_Página.png" alt = "Logo da Empresa" id = "logo"> </a>
-            <form action = "" method = "GET">
+            <form action = "">
                 <label for = "caixa_pesquisa"></label>
                 <input type = "text" placeholder = "Digite o que você procura" id = "caixa_pesquisa" maxlength = "30">
             </form>
@@ -35,7 +34,7 @@
                 <span id = "nome_carrinho"> CARRINHO </span>
             </button>
 
-            <a href = "../Tela de Login/Tela de Login.html">
+            <a href = "../Tela_Login/Tela_Login.html">
                 <figure> <img src = "../Especificacao/Imagens_Utilizadas/Simbolo_Logout.png" alt = "Símbolo de sair da página" id = "simbolo_logout">  </figure> 
                 <span id = "nome_sair"> SAIR </span>
             </a>   
