--- a/Especificacao/GTA V/GTA V.html
+++ b/Especificacao/GTA V/GTA V.html
@@ -5,7 +5,6 @@
         <title> GTA V - PS4 </title>
         <link rel = "stylesheet" href = "../Css_Especificação.css">
         <link rel = "sortcut icon" href = "../Imagens_Utilizadas/Icon_Navegador.png" type = "image/x-icon"/>
-        <script src = "../saudacao.js"></script>
         <style> 
             @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@900&display=swap'); /* Fonte Roboto Bold */
             @import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@700&display=swap'); /* Fonte Passion One Bold */
@@ -16,8 +15,8 @@
     <body>
 
         <header>
-            <a href = "C:\Users\alcid\Desktop\Alcides_IFRN_CNAT\Matérias 1º Período\Web_Design\Projeto_Final_Site\Página Inicial\Página Inicial.html">  <img src = "../Imagens_Utilizadas/Logo_Página.png" alt = "Logo da Empresa" id = "logo"> </a>
-            <form action = "" method = "GET">
+            <a href = "../../Pagina_Inicial/Pagina_Inicial.html">  <img src = "../Imagens_Utilizadas/Logo_Página.png" alt = "Logo da Empresa" id = "logo"> </a>
+            <form action = "">
                 <label for = "caixa_pesquisa"></label>
                 <input type = "text" placeholder = "Digite o que você procura" id = "caixa_pesquisa" maxlength = "30">
             </form>
@@ -36,7 +35,7 @@
                 <span id = "nome_carrinho"> CARRINHO </span>
             </button>
 
-            <a href = "C:\Users\alcid\Desktop\Alcides_IFRN_CNAT\Matérias 1º Período\Web_Design\Projeto_Final_Site\Tela de Login\Tela de Login.html">
+            <a href = "../../Tela_Login/Tela_Login.html">
                 <figure> <img src = "../Imagens_Utilizadas/Simbolo_Logout.png" alt = "Símbolo de sair da página" id = "simbolo_logout"></figure> 
                 <span id = "nome_sair"> SAIR </span>
             </a>   
@@ -51,7 +50,7 @@
                     <span class = "plataforma"> PS4 MÍDIA DIGITAL </span> <br>
                     <span class = "prazo_aluguel"> ALUGUEL 30 DIAS - PT-BR </span>
                 </p>
-                <a href = "C:\Users\alcid\Desktop\Alcides_IFRN_CNAT\Matérias 1º Período\Web_Design\Projeto_Final_Site\Página Inicial\Página Inicial.html" id = "link_tag">  <span class = "tag_jogo" > TAG: <span id = "plataforma"> Jogos PS4 </span> </span> </a>
+                <a href = "../../Pagina_Inicial/Pagina_Inicial.html" id = "link_tag">  <span class = "tag_jogo" > TAG: <span id = "plataforma"> Jogos PS4 </span> </span> </a>
                 <br> <br> <br>
                 <span id = "preco"> R$ 20,99 </span>
 
