--- a/Tela_Login/Tela_Login.html
+++ b/Tela_Login/Tela_Login.html
@@ -4,7 +4,7 @@
         <meta charset = "UTF-8">
         <title> The Five Players - Login </title>
         <link rel = "stylesheet" href = "Css_Login.css">
-        <link rel = "sortcut icon" href = "Icon_Navegador.png" type = "image/x-icon"/>
+        <link rel = "sortcut icon" href = "../Imagens_Utilizadas/Icon_Navegador.png" type = "image/x-icon"/>
         <style> 
             @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@900&display=swap'); /* Fonte Roboto Bold */
             @import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@700&display=swap'); /* Fonte Passion One Bold */
