--- a/Especificacao/Life is Strange/Life is Strange.html
+++ b/Especificacao/Life is Strange/Life is Strange.html
@@ -30,6 +30,12 @@
                 <span id = "nome_suporte"> SUPORTE </span>
             </button>
 
+            <button id = "botao_idioma">
+                <a href = "../../Especificacao_Ingles/Life is Strange/Life is Strange.html"> 
+                    <figure>  <img src = "../Imagens_Utilizadas/US.png" alt = "Bandeira dos Estados Unidos" id = "simbolo_US">  </figure> 
+                </a>
+            </button>
+
             <button id = "botao_carrinho">  
                 <figure> <img src = "../Imagens_Utilizadas/Simbolo_Carrinho.png" alt = "Símbolo de carrinho de compras" id = "simbolo_carrinho"> </figure> 
                 <span id = "nome_carrinho"> CARRINHO </span>
