--- a/Tela_Login/Tela_Login.html
+++ b/Tela_Login/Tela_Login.html
@@ -4,7 +4,7 @@
         <meta charset = "UTF-8">
         <title> The Five Players - Login </title>
         <link rel = "stylesheet" href = "Css_Login.css">
-        <link rel = "sortcut icon" href = "../Imagens_Utilizadas/Icon_Navegador.png" type = "image/x-icon"/>
+        <link rel = "sortcut icon" href = "../Especificacao/Imagens_Utilizadas/Icon_Navegador.png" type = "image/x-icon"/>
         <style> 
             @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@900&display=swap'); /* Fonte Roboto Bold */
             @import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@700&display=swap'); /* Fonte Passion One Bold */
@@ -15,7 +15,15 @@
     <body>              
       
         <main> 
+
+            <button id = "botao_idioma">
+                <a href = "../Tela_Login_Ingles/Tela_Login.html"> 
+                    <figure>  <img src = "../Especificacao/Imagens_Utilizadas/US.png" alt = "Bandeira dos Estados Unidos" id = "simbolo_US">  </figure> 
+                </a>
+            </button>
+
             <figure> <a href = "Tela_Login.html"> <img src = "Logo.png" alt = "Logo da Empresa" id = "Logo"> </a> </figure>
+
             <form action = "../Pagina_Inicial/Pagina_Inicial.html" id = "formulario">
                 <section id = "tela_login">  
                     <header>
