--- a/Pagina_Inicial/Pagina_Inicial.html
+++ b/Pagina_Inicial/Pagina_Inicial.html
@@ -17,7 +17,7 @@
             <a href = "Pagina_Inicial.html"><img src = "../Especificacao/Imagens_Utilizadas/Logo_Página.png" alt = "Logo da Empresa" id = "logo"> </a>
             <form action = "">
                 <label for = "caixa_pesquisa"></label>
-                <input type = "text" placeholder = "Digite o que você procura" id = "caixa_pesquisa" maxlength = "30">
+                <input type = "text" placeholder = "Pesquise jogos, plataformas e muito mais" id = "caixa_pesquisa" maxlength = "30">
             </form>
 
             <button id = "botao_busca">  
@@ -27,6 +27,12 @@
             <button id = "botao_suporte">  
                <figure> <img src = "../Especificacao/Imagens_Utilizadas/Simbolo_Suporte.png" alt = "Simbolo de suporte ao usuário" id = "simbolo_suporte"> </figure>
                 <span id = "nome_suporte"> SUPORTE </span>
+            </button>
+
+            <button id = "botao_idioma">
+                <a href = "../Pagina_Inicial_Ingles/Pagina_Inicial.html"> 
+                    <figure>  <img src = "../Especificacao/Imagens_Utilizadas/US.png" alt = "Bandeira dos Estados Unidos" id = "simbolo_US">  </figure> 
+                </a>
             </button>
 
             <button id = "botao_carrinho">  
