--- a/Especificacao/F1 2020/F1 2020.html
+++ b/Especificacao/F1 2020/F1 2020.html
@@ -18,7 +18,7 @@
             <a href = "../../Pagina_Inicial/Pagina_Inicial.html">  <img src = "../Imagens_Utilizadas/Logo_Página.png" alt = "Logo da Empresa" id = "logo"> </a>
             <form action = "">
                 <label for = "caixa_pesquisa"></label>
-                <input type = "text" placeholder = "Digite o que você procura" id = "caixa_pesquisa" maxlength = "30">
+                <input type = "text" placeholder = "Pesquise jogos, plataformas e muito mais" id = "caixa_pesquisa" maxlength = "30">
             </form>
 
             <button id = "botao_busca">  
