--- a/Pagina_Inicial/Pagina_Inicial.html
+++ b/Pagina_Inicial/Pagina_Inicial.html
@@ -47,7 +47,7 @@
         </header>
 
         <main> 
-            <h1 id = "mais_alugados"> MAIS ALUGADOS </h1> 
+            <h1 id = "mais_alugados"> JOGOS MAIS ALUGADOS </h1> 
                 <a href = "../Especificacao/Resident Evil Village/Resident Evil Village.html">
                     <section class = "jogos">  
                         <figure> 
