--- a/Especificacao_Ingles/F1 2020/F1 2020.html
+++ b/Especificacao_Ingles/F1 2020/F1 2020.html
@@ -15,7 +15,7 @@
     <body>
 
         <header>
-            <a href = "../../Pagina_Inicial/Pagina_Inicial.html">  <img src = "../Imagens_Utilizadas/Logo_Página.png" alt = "Logo da Empresa" id = "logo"> </a>
+            <a href = "../../Pagina_Inicial_Ingles/Pagina_Inicial.html">  <img src = "../Imagens_Utilizadas/Logo_Página.png" alt = "Logo da Empresa" id = "logo"> </a>
             <form action = "">
                 <label for = "caixa_pesquisa"></label>
                 <input type = "text" placeholder = "Search for games, platforms and more" id = "caixa_pesquisa" maxlength = "30">
@@ -41,7 +41,7 @@
                 <span id = "nome_carrinho"> CART </span>
             </button>
 
-            <a href = "../../Tela_Login/Tela_Login.html">
+            <a href = "../../Tela_Login_Ingles/Tela_Login.html">
                 <figure> <img src = "../Imagens_Utilizadas/Simbolo_Logout.png" alt = "Símbolo de sair da página" id = "simbolo_logout"></figure> 
                 <span id = "nome_sair"> LOGOUT </span>
             </a>   
@@ -58,7 +58,7 @@
                 </p>
                 <a href = "../../Pagina_Inicial_Ingles/Pagina_Inicial.html" id = "link_tag">  <span class = "tag_jogo" > TAG: <span id = "plataforma"> PS4 Games </span> </span> </a>
                 <br> <br> <br>
-                <span id = "preco"> US$ 4,99 </span>
+                <span id = "preco"> US$ 0.18 </span>
 
                 <section id = "seção_quantidade_aluguel">
                     <label for = "quantidade_aluguel">
