--- a/Pagina_Inicial_Ingles/Pagina_Inicial.html
+++ b/Pagina_Inicial_Ingles/Pagina_Inicial.html
@@ -40,14 +40,14 @@
                 <span id = "nome_carrinho"> CART </span>
             </button>
 
-            <a href = "../Tela_Login/Tela_Login.html">
+            <a href = "../Tela_Login_Ingles/Tela_Login.html">
                 <figure> <img src = "../Especificacao/Imagens_Utilizadas/Simbolo_Logout.png" alt = "Símbolo de sair da página" id = "simbolo_logout">  </figure> 
                 <span id = "nome_sair"> LOGOUT </span>
             </a>   
         </header>
 
         <main> 
-            <h1 id = "mais_alugados"> MAIS ALUGADOS </h1> 
+            <h1 id = "mais_alugados"> TOP-RENTED GAMES </h1> 
                 <a href = "../Especificacao_Ingles/Resident Evil Village/Resident Evil Village.html">
                     <section class = "jogos">  
                         <figure> 
@@ -60,7 +60,7 @@
                             <span class = "plataforma"> PS4 - DIGITAL MEDIA </span>
                             <br>
                             <span class = "prazo_aluguel"> 5 RENT DAYS - US </span>
-                            <p class = "precos"> US$ 6,99 </p>
+                            <p class = "precos"> US$ 1.23 </p>
                         </p>
                     </section>
                 </a>
@@ -76,7 +76,7 @@
                         <span class = "plataforma"> PS4 - DIGITAL MEDIA </span> 
                         <br> 
                         <span class = "prazo_aluguel"> 8 RENT DAYS - US </span> 
-                        <p class = "precos"> US$ 10,99 </p>
+                        <p class = "precos"> US$ 1.93 </p>
                     </p>
                 </section>
             </a>
@@ -92,7 +92,7 @@
                         <span class = "plataforma"> PS4 - DIGITAL MEDIA </span>
                         <br>
                         <span class = "prazo_aluguel"> 15 RENT DAYS - US </span> 
-                        <p class = "precos"> US$ 15,99 </p>
+                        <p class = "precos"> US$ 2.81 </p>
                     </p>
                 </section>
             </a>
@@ -108,7 +108,7 @@
                         <span class = "plataforma"> PS4 - DIGITAL MEDIA </span>
                         <br>
                         <span class = "prazo_aluguel"> 2 RENT DAYS - US </span> 
-                        <p class = "precos"> US$ 3,99 </p>
+                        <p class = "precos"> US$ 0.70 </p>
                     </p>
                 </section>
             </a>
@@ -124,7 +124,7 @@
                         <span class = "plataforma"> PS4 - DIGITAL MEDIA </span>
                         <br>
                         <span class = "prazo_aluguel"> 30 RENT DAYS - US </span> 
-                        <p class = "precos"> US$ 20,99 </p>
+                        <p class = "precos"> US$ 3.69 </p>
                     </p>
                 </section>
             </a>
@@ -140,7 +140,7 @@
                         <span class = "plataforma"> PS4 - DIGITAL MEDIA </span>
                         <br>
                         <span class = "prazo_aluguel"> 11 RENT DAYS - US </span> 
-                        <p class = "precos"> US$ 12,99 </p>
+                        <p class = "precos"> US$ 2.28 </p>
                     </p>
                 </section>
             </a>
@@ -156,7 +156,7 @@
                         <span class = "plataforma"> PS4 - DIGITAL MEDIA </span>
                         <br>
                         <span class = "prazo_aluguel"> 30 RENT DAYS - US </span> 
-                        <p class = "precos"> US$ 18,99 </p>
+                        <p class = "precos"> US$ 3.34 </p>
                     </p>
                 </section>
             </a>
@@ -172,7 +172,7 @@
                         <span class = "plataforma"> PS4 - DIGITAL MEDIA </span>
                         <br>
                         <span class = "prazo_aluguel"> 3 RENT DAYS - US </span> 
-                        <p class = "precos"> US$ 4,99 </p>
+                        <p class = "precos"> US$ 0.18 </p>
                     </p>
                 </section>
             </a>
@@ -188,7 +188,7 @@
                         <span class = "plataforma"> PS4 - DIGITAL MEDIA </span>
                         <br>
                         <span class = "prazo_aluguel"> 20 RENT DAYS - US </span> 
-                        <p class = "precos"> US$ 17,99 </p>
+                        <p class = "precos"> US$ 3.16 </p>
                     </p>
                 </section>
             </a>
@@ -204,7 +204,7 @@
                         <span class = "plataforma"> PS4 - DIGITAL MEDIA </span>
                         <br>
                         <span class = "prazo_aluguel"> 15 RENT DAYS - US </span> 
-                        <p class = "precos"> US$ 13,99 </p>
+                        <p class = "precos"> US$ 2,46 </p>
                     </p>
                 </section>
             </a>
@@ -220,7 +220,7 @@
                         <span class = "plataforma"> PS4 - DIGITAL MEDIA </span>
                         <br>
                         <span class = "prazo_aluguel"> 12 RENT DAYS - US </span> 
-                        <p class = "precos"> US$ 9,99 </p>
+                        <p class = "precos"> US$ 1.76 </p>
                     </p>
                 </section>
             </a>
@@ -236,7 +236,7 @@
                         <span class = "plataforma"> PS4 - DIGITAL MEDIA </span>
                         <br>
                         <span class = "prazo_aluguel"> 5 RENT DAYS - US </span> 
-                        <p class = "precos"> US$ 5,99 </p>
+                        <p class = "precos"> US$ 1.05 </p>
                     </p>
                 </section>
             </a>
@@ -252,7 +252,7 @@
                         <span class = "plataforma"> PS4 - DIGITAL MEDIA </span>
                         <br>
                         <span class = "prazo_aluguel"> 5 RENT DAYS - US </span> 
-                        <p class = "precos"> US$ 5,99 </p>
+                        <p class = "precos"> US$ 1.05 </p>
                     </p>
                 </section>
             </a>
@@ -268,7 +268,7 @@
                         <span class = "plataforma"> PS4 - DIGITAL MEDIA </span>
                         <br>
                         <span class = "prazo_aluguel"> 7 RENT DAYS - US </span> 
-                        <p class = "precos"> US$ 6,99 </p>
+                        <p class = "precos"> US$ 1.23 </p>
                     </p>
                 </section>
             </a>
@@ -284,7 +284,7 @@
                         <span class = "plataforma"> PS4 - DIGITAL MEDIA </span>
                         <br>
                         <span class = "prazo_aluguel"> 2 RENT DAYS - US </span> 
-                        <p class = "precos"> US$ 1,99 </p>
+                        <p class = "precos"> US$ 0.35 </p>
                     </p>
                 </section>
             </a>
