--- a/Especificacao_Ingles/Resident Evil Village/Resident Evil Village.html
+++ b/Especificacao_Ingles/Resident Evil Village/Resident Evil Village.html
@@ -9,16 +9,16 @@
             @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@900&display=swap'); /* Fonte Roboto Bold */
             @import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@700&display=swap'); /* Fonte Passion One Bold */
             @import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap'); /* Fonte Passion One */
-        </style>
-    </head>
+        </style>    
+    </head> 
 
     <body>
 
         <header>
-            <a href = "../../Pagina_Inicial/Pagina_Inicial.html">  <img src = "../Imagens_Utilizadas/Logo_Página.png" alt = "Logo da Empresa" id = "logo"> </a>
+            <a href = "../../Pagina_Inicial_Ingles/Pagina_Inicial.html">  <img src = "../Imagens_Utilizadas/Logo_Página.png" alt = "Logo da Empresa" id = "logo"> </a>
             <form action = "">
                 <label for = "caixa_pesquisa"></label>
-                <input type = "text" placeholder = "Digite o que você procura" id = "caixa_pesquisa" maxlength = "30">
+                <input type = "text" placeholder = "Search for games, platforms and more" id = "caixa_pesquisa" maxlength = "30">
             </form>
 
             <button id = "botao_busca">  
@@ -27,7 +27,7 @@
 
             <button id = "botao_suporte">  
                <figure> <img src = "../Imagens_Utilizadas/Simbolo_Suporte.png" alt = "Simbolo de suporte ao usuário" id = "simbolo_suporte"> </figure>
-                <span id = "nome_suporte"> SUPORTE </span>
+                <span id = "nome_suporte"> SUPPORT </span>
             </button>
 
             <button id = "botao_idioma">
@@ -38,12 +38,12 @@
 
             <button id = "botao_carrinho">  
                 <figure> <img src = "../Imagens_Utilizadas/Simbolo_Carrinho.png" alt = "Símbolo de carrinho de compras" id = "simbolo_carrinho"> </figure> 
-                <span id = "nome_carrinho"> CARRINHO </span>
+                <span id = "nome_carrinho"> CART </span>
             </button>
 
-            <a href = "../../Tela_Login/Tela_Login.html">
+            <a href = "../../Tela_Login_Ingles/Tela_Login.html">
                 <figure> <img src = "../Imagens_Utilizadas/Simbolo_Logout.png" alt = "Símbolo de sair da página" id = "simbolo_logout"></figure> 
-                <span id = "nome_sair"> SAIR </span>
+                <span id = "nome_sair"> LOGOUT </span>
             </a>   
 
         </header>
@@ -53,30 +53,31 @@
                 <figure> <img src = "Resident Evil Village.jpg" alt = "Capa do Jogo Resident Evil Village"> </figure>
                 <p class = "descricoes_jogos">
                     <span class = "nome_jogo"> RESIDENT EVIL VILLAGE - </span>
-                    <span class = "plataforma"> PS4 MÍDIA DIGITAL </span>
-                    <span class = "prazo_aluguel"> ALUGUEL 5 DIAS - PT-BR </span>
+                    <span class = "plataforma"> PS4 DIGITAL MEDIA </span> 
+                    <br>
+                    <span class = "prazo_aluguel"> 5 RENT DAYS - US </span>
                 </p>
-                <a href = "../../Pagina_Inicial/Pagina_Inicial.html" id = "link_tag">  <span class = "tag_jogo" > TAG: <span id = "plataforma"> Jogos PS4 </span> </span> </a>
+                <a href = "../../Pagina_Inicial/Pagina_Inicial.html" id = "link_tag">  <span class = "tag_jogo" > TAG: <span id = "plataforma"> PS4 Games </span> </span> </a>
                 <br> <br> <br>
-                <span id = "preco"> R$ 6,99 </span>
+                <span id = "preco"> US$ 1.23 </span>
 
                 <section id = "seção_quantidade_aluguel">
                     <label for = "quantidade_aluguel">
-                        <span id = "nome_quantidade"> QTDE: </span> 
+                        <span id = "nome_quantidade"> AMOUNT: </span> 
                         <input type = "number" id = "quantidade_aluguel" min = "1" value = "1"> 
                     </label>
                 </section>
 
                 <section id = "seção_botao_alugar"> 
-                    <button id = "botao_alugar"> ALUGAR
+                    <button id = "botao_alugar"> RENT
                         <figure> <img id = "simbolo_carrinho_aluguel" src = "../Imagens_Utilizadas/Simbolo_Carrinho.png" alt = "Símbolo de carrinho de compras"> </figure>
                     </button>
                     <br> 
-                    <span id = "nome_status"> Status: <span id = "status"> disponível </span> </span>
+                    <span id = "nome_status"> Status: <span id = "status"> available </span> </span>
                 </section>
 
                 <section id = "seção_lista_desejos">
-                    <button id = "botao_lista_desejos"> Lista de Desejos 
+                    <button id = "botao_lista_desejos"> Wishlist
                         <figure id = "conteiner_coracao"> <img id = "simbolo_coracao" src = "../Imagens_Utilizadas/Coracao_Lista_Desejos.jpg" alt = "Símbolo de coração como lista de desejos"> </figure>
                     </button>
                 </section>
@@ -85,13 +86,13 @@
                     <a href = "https://www.youtube.com/watch?v=50C9vDayxkE" target = "_blank">
                     <figure> <img src = "../Imagens_Utilizadas/Youtube_Icone.jpg" alt = "Logomarca do Youtube" id = "icone_Youtube"> </figure>
                     </a>
-                    <a href = "https://www.youtube.com/watch?v=50C9vDayxkE" target="_blank">  <span id = "texto_trailer"> Assistir trailer do game </span> </a>
+                    <a href = "https://www.youtube.com/watch?v=50C9vDayxkE" target="_blank">  <span id = "texto_trailer"> Watch game trailer </span> </a>
                 </section>
 
         </main>
 
         <footer id = "direitos_reservados">
-           <p> The Five Players - CNPJ: XX.XX.XXX/XXX-XX © Todos os direitos reservados. 2021 </p> 
+           <p> The Five Players - CNPJ: XX.XX.XXX/XXX-XX © All rights reserved. 2021 </p> 
         </footer>
     </body>
 
