--- a/Especificacao_Ingles/Mortal Kombat 11/Mortal Kombat 11.html
+++ b/Especificacao_Ingles/Mortal Kombat 11/Mortal Kombat 11.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang = "eng-US"> 
+<html lang = "en-US"> 
     <head>
         <meta charset = "UTF-8">
         <title> Mortal Kombat 11 - PS4 </title>
@@ -54,7 +54,7 @@
                 <p class = "descricoes_jogos">
                     <span class = "nome_jogo"> MORTAL KOMBAT 11 - </span>
                     <span class = "plataforma"> PS4 DIGITAL MEDIA </span> <br>
-                    <span class = "prazo_aluguel"> 11 RENT DAYS - US </span>
+                    <span class = "prazo_aluguel"> 11 RENT DAYS - EN-US </span>
                 </p>
                 <a href = "../../Pagina_Inicial_Ingles/Pagina_Inicial.html" id = "link_tag">  <span class = "tag_jogo" > TAG: <span id = "plataforma"> PS4 Games </span> </span> </a>
                 <br> <br> <br>
