--- a/Especificacao_Ingles/Resident Evil Village/Resident Evil Village.html
+++ b/Especificacao_Ingles/Resident Evil Village/Resident Evil Village.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang = "eng-US"> 
+<html lang = "en-US"> 
     <head>
         <meta charset = "UTF-8">
         <title> Resident Evil Village - PS4 </title>
@@ -55,7 +55,7 @@
                     <span class = "nome_jogo"> RESIDENT EVIL VILLAGE - </span>
                     <span class = "plataforma"> PS4 DIGITAL MEDIA </span> 
                     <br>
-                    <span class = "prazo_aluguel"> 5 RENT DAYS - US </span>
+                    <span class = "prazo_aluguel"> 5 RENT DAYS - EN-US </span>
                 </p>
                 <a href = "../../Pagina_Inicial/Pagina_Inicial.html" id = "link_tag">  <span class = "tag_jogo" > TAG: <span id = "plataforma"> PS4 Games </span> </span> </a>
                 <br> <br> <br>
