--- a/Pagina_Inicial_Ingles/Pagina_Inicial.html
+++ b/Pagina_Inicial_Ingles/Pagina_Inicial.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang = "eng-us"> 
+<html lang = "en-US"> 
     <head>
         <meta charset = "UTF-8">
         <title> The Five Players - Homepage </title>
@@ -59,7 +59,7 @@
                             <br>
                             <span class = "plataforma"> PS4 - DIGITAL MEDIA </span>
                             <br>
-                            <span class = "prazo_aluguel"> 5 RENT DAYS - US </span>
+                            <span class = "prazo_aluguel"> 5 RENT DAYS - EN-US </span>
                             <p class = "precos"> US$ 1.23 </p>
                         </p>
                     </section>
@@ -75,7 +75,7 @@
                         <br> 
                         <span class = "plataforma"> PS4 - DIGITAL MEDIA </span> 
                         <br> 
-                        <span class = "prazo_aluguel"> 8 RENT DAYS - US </span> 
+                        <span class = "prazo_aluguel"> 8 RENT DAYS - EN-US </span> 
                         <p class = "precos"> US$ 1.93 </p>
                     </p>
                 </section>
@@ -91,7 +91,7 @@
                         <br>
                         <span class = "plataforma"> PS4 - DIGITAL MEDIA </span>
                         <br>
-                        <span class = "prazo_aluguel"> 15 RENT DAYS - US </span> 
+                        <span class = "prazo_aluguel"> 15 RENT DAYS - EN-US </span> 
                         <p class = "precos"> US$ 2.81 </p>
                     </p>
                 </section>
@@ -107,7 +107,7 @@
                         <br>
                         <span class = "plataforma"> PS4 - DIGITAL MEDIA </span>
                         <br>
-                        <span class = "prazo_aluguel"> 2 RENT DAYS - US </span> 
+                        <span class = "prazo_aluguel"> 2 RENT DAYS - EN-US </span> 
                         <p class = "precos"> US$ 0.70 </p>
                     </p>
                 </section>
@@ -123,7 +123,7 @@
                         <br>
                         <span class = "plataforma"> PS4 - DIGITAL MEDIA </span>
                         <br>
-                        <span class = "prazo_aluguel"> 30 RENT DAYS - US </span> 
+                        <span class = "prazo_aluguel"> 30 RENT DAYS - EN-US </span> 
                         <p class = "precos"> US$ 3.69 </p>
                     </p>
                 </section>
@@ -139,7 +139,7 @@
                         <br>
                         <span class = "plataforma"> PS4 - DIGITAL MEDIA </span>
                         <br>
-                        <span class = "prazo_aluguel"> 11 RENT DAYS - US </span> 
+                        <span class = "prazo_aluguel"> 11 RENT DAYS - EN-US </span> 
                         <p class = "precos"> US$ 2.28 </p>
                     </p>
                 </section>
@@ -155,7 +155,7 @@
                         <br>
                         <span class = "plataforma"> PS4 - DIGITAL MEDIA </span>
                         <br>
-                        <span class = "prazo_aluguel"> 30 RENT DAYS - US </span> 
+                        <span class = "prazo_aluguel"> 30 RENT DAYS - EN-US </span> 
                         <p class = "precos"> US$ 3.34 </p>
                     </p>
                 </section>
@@ -171,7 +171,7 @@
                         <br>
                         <span class = "plataforma"> PS4 - DIGITAL MEDIA </span>
                         <br>
-                        <span class = "prazo_aluguel"> 3 RENT DAYS - US </span> 
+                        <span class = "prazo_aluguel"> 3 RENT DAYS - EN-US </span> 
                         <p class = "precos"> US$ 0.18 </p>
                     </p>
                 </section>
@@ -187,7 +187,7 @@
                         <br>
                         <span class = "plataforma"> PS4 - DIGITAL MEDIA </span>
                         <br>
-                        <span class = "prazo_aluguel"> 20 RENT DAYS - US </span> 
+                        <span class = "prazo_aluguel"> 20 RENT DAYS - EN-US </span> 
                         <p class = "precos"> US$ 3.16 </p>
                     </p>
                 </section>
@@ -203,7 +203,7 @@
                         <br>
                         <span class = "plataforma"> PS4 - DIGITAL MEDIA </span>
                         <br>
-                        <span class = "prazo_aluguel"> 15 RENT DAYS - US </span> 
+                        <span class = "prazo_aluguel"> 15 RENT DAYS - EN-US </span> 
                         <p class = "precos"> US$ 2,46 </p>
                     </p>
                 </section>
@@ -219,7 +219,7 @@
                         <br>
                         <span class = "plataforma"> PS4 - DIGITAL MEDIA </span>
                         <br>
-                        <span class = "prazo_aluguel"> 12 RENT DAYS - US </span> 
+                        <span class = "prazo_aluguel"> 12 RENT DAYS - EN-US </span> 
                         <p class = "precos"> US$ 1.76 </p>
                     </p>
                 </section>
@@ -235,7 +235,7 @@
                         <br>
                         <span class = "plataforma"> PS4 - DIGITAL MEDIA </span>
                         <br>
-                        <span class = "prazo_aluguel"> 5 RENT DAYS - US </span> 
+                        <span class = "prazo_aluguel"> 5 RENT DAYS - EN-US </span> 
                         <p class = "precos"> US$ 1.05 </p>
                     </p>
                 </section>
@@ -251,7 +251,7 @@
                         <br>
                         <span class = "plataforma"> PS4 - DIGITAL MEDIA </span>
                         <br>
-                        <span class = "prazo_aluguel"> 5 RENT DAYS - US </span> 
+                        <span class = "prazo_aluguel"> 5 RENT DAYS - EN-US </span> 
                         <p class = "precos"> US$ 1.05 </p>
                     </p>
                 </section>
@@ -267,7 +267,7 @@
                         <br>
                         <span class = "plataforma"> PS4 - DIGITAL MEDIA </span>
                         <br>
-                        <span class = "prazo_aluguel"> 7 RENT DAYS - US </span> 
+                        <span class = "prazo_aluguel"> 7 RENT DAYS - EN-US </span> 
                         <p class = "precos"> US$ 1.23 </p>
                     </p>
                 </section>
@@ -283,7 +283,7 @@
                         <br>
                         <span class = "plataforma"> PS4 - DIGITAL MEDIA </span>
                         <br>
-                        <span class = "prazo_aluguel"> 2 RENT DAYS - US </span> 
+                        <span class = "prazo_aluguel"> 2 RENT DAYS - EN-US </span> 
                         <p class = "precos"> US$ 0.35 </p>
                     </p>
                 </section>
