--- a/Tela_Login_Ingles/Tela_Login.html
+++ b/Tela_Login_Ingles/Tela_Login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang = "eng-us"> 
+<html lang = "en-US"> 
     <head>
         <meta charset = "UTF-8">
         <title> The Five Players - Login </title>
